// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container background-color renders correctly 1`] = `
.c0 {
  background-color: rgba(145,109,67,0.35);
  border-radius: 20px;
  padding: 20px 30px;
  box-shadow: none;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}

<div
  className="c0"
/>
`;

exports[`Container border-radius renders correctly 1`] = `
.c0 {
  background-color: rgba(145,109,67,0.35);
  border-radius: 20px;
  padding: 20px 30px;
  box-shadow: none;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}

<div
  className="c0"
/>
`;

exports[`Container boxShadow renders correctly 1`] = `
.c0 {
  background-color: rgba(145,109,67,0.35);
  border-radius: 20px;
  padding: 20px 30px;
  box-shadow: 0px 4px 15px rgba(0,0,0,0.25);
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}

<div
  className="c0"
/>
`;

exports[`Container width renders correctly 1`] = `
.c0 {
  background-color: rgba(145,109,67,0.35);
  border-radius: 20px;
  padding: 20px 30px;
  box-shadow: none;
  width: 20px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}

<div
  className="c0"
  width="20px"
/>
`;
